# todo-fun

./: .gitignore  alembic.ini  pyproject.toml
src/: config.py  dao.py  database.py  main.py
src/migrations/: env.py
src/migrations/versions/: 2023_07_18_2333-3f1e318a7b00_init.py  2023_07_18_2334-894a172d4f98_tasks.py
src/todos/: dao.py  models.py  router.py  schemas.py
